--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <a>Cats</a>
           </li>
           <li>
-            <a>Dogs</a>
+            <a class='active'>Dogs</a>
           </li>
           <li>
             <a>Horses</a>
@@ -34,14 +34,64 @@
 
       <!-- MAIN content -->
       <div class="off-canvas-content" data-off-canvas-content>
-        <header class="main-header">
-          <a id="leftNavOpen" data-open="navBar">
-            <i class="fa fa-bars" aria-hidden="true"></i>
-          </a>
+        <header>
+          <div class="main-header">
+            <a id="leftNavOpen" data-toggle="navBar">
+              <i class="fa fa-bars" aria-hidden="true"></i>
+            </a>
+          </div>
+          <nav id="headerNavBar">
+            <div class="row">
+              <div class="small-12 medium-3 text-center columns nav-item">
+                <a class="">Cats</a>
+              </div>
+              <div class="small-12 medium-3 text-center columns nav-item">
+                <a class="active">Dogs</a>
+              </div>
+              <div class="small-12 medium-3 text-center columns nav-item">
+                <a class="">Horses</a>
+              </div>
+              <div class="small-12 medium-3 text-center columns nav-item">
+                <a class="">Contact Us</a>
+              </div>
+            </div>
 
+          </nav>
         </header>
 
         <p>content goes here...</p>
+
+        <footer>
+          <div class="main-footer">
+            <div class="row align-middle">
+              <div class="small-12 medium-8 large-6 columns copyright">
+                Animals 2016 &copy;
+              </div>
+              <div class="small-12 medium-4 large-6 columns help-cont">
+                <a class="help button" data-open="helpModal">Help</a>
+              </div>
+            </div>
+          </div>
+        </footer>
+
+        <!-- Help modal -->
+        <div class="reveal" id="helpModal" data-reveal>
+          <h3>Help!</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur assumenda, tempore quas? Quo eum obcaecati labore tempore. Debitis ea tenetur qui praesentium vel sed, reiciendis voluptatibus perferendis asperiores, laboriosam veniam.</p>
+
+          <div class="row">
+            <div class="small-12 medium-6 columns text-center">
+              <a class="button">Yes</a>
+            </div>
+            <div class="small-12 medium-6 columns text-center">
+              <a class="button" data-close>No</a>
+            </div>
+          </div>
+
+          <!-- <button class="close-button" data-close aria-label="Close reveal" type="button">
+            <i class="fa fa-times" aria-hidden="true"></i>
+          </button> -->
+        </div>
 
       </div>
       <!-- MAIN content end -->
