--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
           </nav>
         </header>
 
-        <div ng-view>Loadnig...</div>
+        <div class="main-content" ng-view>Loadnig...</div>
 
         <footer>
           <div class="main-footer">
